--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "react-slider": "^2.0.6"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
